Bug 626227: Use a single VRAM texture but multiple system RAM textures for manual glyph drawing. r=jrmuizel a=blocking-betaN